# OpenCL-Hello-World

./: CMakeLists.txt  README.md  kernel.cl  main.cpp
